--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,14 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+db/*
+source_documents/*
+.conda/
+.conda/*
+.vscode/
+.vscode/*
 # C extensions
 *.so
-
 # Distribution / packaging
 .Python
 build/
